Realizando main 70% completo

--- a/index.html
+++ b/index.html
@@ -46,6 +46,44 @@
       </button>
     </section>
   </header>
+  <main>
+    <section class="main__section--number1">
+      <div class="texts__main container__texts--number1">
+        <h2>Disfruta en tu TV</h2>
+        <p>Ve en smart TV, PlayStation, Xbox, Chromecast, Apple TV, reproductores de Blu-ray y más.</p>
+      </div>
+      <div class="imgs__main container__imgs--number1">
+        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
+      </div>
+    </section> 
+    <section class="main__section--number2">
+      <div class="texts__main container__texts--number2">
+        <h2>Descarga tus series para verlas offline.</h2>
+        <p>Guarda tu contenido favorito y tendrás siempre algo para ver.</p>
+      </div>
+      <div class="imgs__main container__imgs--number2">
+        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
+      </div>
+    </section> 
+    <section class="main__section--number3">
+      <div class="texts__main container__texts--number3">
+        <h2>Disfruta donde quieras.</h2>
+        <p>Películas y series ilimitadas en tu teléfono, tablet, computadora y TV sin costo extra.</p>
+      </div>
+      <div class="imgs__main container__imgs--number3">
+        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/device-pile.png" alt="">
+      </div>
+    </section> 
+    <section class="main__section--number4">
+      <div class="texts__main container__texts--number4">
+        <h2>Crea perfiles para niños.</h2>
+        <p>Los niños vivirán aventuras con sus personajes favoritos en un espacio diseñado exclusivamente para ellos, sin costo con tu membresía.</p>
+      </div>
+      <div class="imgs__main container__imgs--number4">
+        <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/cards/kidsValueProp.png" alt="">
+      </div>
+    </section> 
+  </main>
   <script src="https://kit.fontawesome.com/15b0387e0a.js" crossorigin="anonymous"></script>
 </body>
 </html>
