Section footer y otra parte de la section Main terminadas

--- a/index.html
+++ b/index.html
@@ -82,8 +82,85 @@
       <div class="imgs__main container__imgs--number4">
         <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/cards/kidsValueProp.png" alt="">
       </div>
-    </section> 
+    </section>
+    <section class="main__section--number5">
+      <div class="container__questions">
+        <h2>Preguntas frecuentes</h2>
+        <div class="questions">
+          <p>¿Qué es Netflix?</p>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="questions">
+          <p>¿Cuánto cuesta Netflix?</p>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="questions">
+          <p>¿Dónde puedo ver Netflix?</p>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="questions">
+          <p>¿Cómo cancelo?</p>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="questions">
+          <p>¿Qué puedo ver en Netflix?</p>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <div class="questions">
+          <p>¿Es bueno Netflix para los niños?</p>
+          <i class="fa-solid fa-plus"></i>
+        </div>
+        <section class="main__section--recommendation">
+          <div>
+            <p>
+              ¿Quieres ver Netflix ya? Ingresa tu email para crear una cuenta o reiniciar tu membresía de Netflix.
+            </p>
+          </div>
+          <div class="main__container--input">
+            <input type="text" class="" placeholder="Email">
+            <button>Comenzar</button>
+          </div>
+        </section>
+      </div>
+    </section>
   </main>
+  <footer>
+    <p>¿Preguntas? Llama al 01 800 917 1564</p>
+    <div class="footer__container--references">
+      <ul>
+        <li>Preguntas frecuentes</li>
+        <li>Cuenta</li>
+        <li>Relaciones con inversionistas</li>
+        <li>Canjear tarjetas de regalo</li>
+        <li>Formas de ver</li>
+        <li>Privacidad</li>
+        <li>Información corporativa</li>
+        <li>Prueba de velocidad</li>
+        <li>Solo en Netflix</li>
+      </ul>
+      <ul>
+        <li>Centro de ayuda</li>
+        <li>Prensa</li>
+        <li>Empleo</li>
+        <li>Comprar</li>
+        <li>Términos de uso</li>
+        <li>Preferencias de cookies</li>
+        <li>Contáctanos</li>
+        <li>Avisos legales</li>
+      </ul>
+    </div>
+    <div class="footer__container--language">
+      <select name="" id="">
+        <option value="">
+          Español
+        </option>
+        <option value="">
+          English
+        </option>
+      </select>
+      <span>Netflix Colombia</span>
+    </div>
+  </footer>
   <script src="https://kit.fontawesome.com/15b0387e0a.js" crossorigin="anonymous"></script>
 </body>
 </html>
